--- a/main.css
+++ b/main.css
@@ -1,41 +1,18 @@
-body {
-height: 100vh;
-width: 100vw;
-display: flex;
-flex-direction: row;
-justify-content: center;
-
-
+body{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.navigation{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.navigation {
-    background-color: gray;
-}
-
-.menu {
-    height: 60vh;
-    width: 15vw;
-    background-color: black;
-    
-}
-
-.info-user {
+.info-user{
     height: 50px;
     width: 15vw;
     background-color: blue;
-}
-
-
-.feed {
-    height: 100vh;
-    width: 30vw;
-    background-color:orange;
-
-}
-
-.dashboard{
-    height: 100vh;
-    width: 20vw;
-    background-color: pink;
-
 }
